--- a/BreezingHealth/res/layout/activity_fillin_information.xml
+++ b/BreezingHealth/res/layout/activity_fillin_information.xml
@@ -11,7 +11,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin" >
 
         <EditText
-            android:id="@+id/userName"
+            android:id="@+id/user_name"
             style="@style/EditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="@dimen/information_cell_height"
@@ -60,30 +60,14 @@
             </RadioGroup>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/information_cell_height"
-            android:layout_marginTop="@dimen/activity_vertical_margin" >
-
-            <EditText
+        <EditText
                 android:id="@+id/date"
                 style="@style/EditTextStyle"
-                android:layout_width="0dp"
+                android:layout_width="200dp"
                 android:layout_height="@dimen/information_cell_height"
-                android:layout_weight="1"
                 android:hint="@string/edittext_hint_born_date"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:singleLine="true" />
-
-            <EditText
-                android:id="@+id/age"
-                style="@style/EditTextStyle"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/information_cell_height"
-                android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
-                android:layout_weight="1"
-                android:hint="@string/edittext_hint_age"
-                android:singleLine="true" />
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,33 +91,80 @@
                 android:singleLine="true" />
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/height"
-            style="@style/EditTextStyle"
+       <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/information_cell_height"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:hint="@string/edittext_hint_height"
-            android:singleLine="true" />
+            android:layout_marginTop="@dimen/activity_vertical_margin" >
 
-        <EditText
-            android:id="@+id/weight"
-            style="@style/EditTextStyle"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/information_cell_height"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:hint="@string/edittext_hint_weight"
-            android:singleLine="true" />
+            <EditText
+                android:id="@+id/height"
+                style="@style/EditTextStyle"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:hint="@string/edittext_hint_height"
+                android:singleLine="true" />
 
-        <EditText
-            android:id="@+id/hopeWeight"
-            style="@style/EditTextStyle"
+            <TextView
+                android:id="@+id/height_unit"
+                style="@style/TitleTextViewStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:singleLine="true"
+                android:text="@string/textview_title_unit" />
+       </RelativeLayout>
+
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/information_cell_height"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:hint="@string/edittext_hint_hope_weight"
-            android:singleLine="true" />
-        
+            android:layout_marginTop="@dimen/activity_vertical_margin" >
+
+            <EditText
+                android:id="@+id/weight"
+                style="@style/EditTextStyle"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:hint="@string/edittext_hint_weight"
+                android:singleLine="true" />
+
+            <TextView
+                android:id="@+id/weight_unit"
+                style="@style/TitleTextViewStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:singleLine="true"
+                android:text="@string/textview_title_unit" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/information_cell_height"
+            android:layout_marginTop="@dimen/activity_vertical_margin" >
+
+            <EditText
+                android:id="@+id/hopeWeight"
+                style="@style/EditTextStyle"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:hint="@string/edittext_hint_hope_weight"
+                android:singleLine="true" />
+
+            <TextView
+                android:id="@+id/hope_weight_unit"
+                style="@style/TitleTextViewStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:singleLine="true"
+                android:text="@string/textview_title_unit" />
+        </RelativeLayout>
+
         <Button
             android:id="@+id/next"
             style="@style/ButtonStyle"
@@ -143,7 +174,7 @@
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:singleLine="true"
             android:text="@string/next" />
-        
+
     </LinearLayout>
 
 </ScrollView>
