--- a/BreezingHealth/res/layout/activity_modify_password.xml
+++ b/BreezingHealth/res/layout/activity_modify_password.xml
@@ -1,8 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:layout_height="match_parent" >
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin" >
+
+        <EditText
+            android:id="@+id/oldPassword"
+            style="@style/EditTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/information_cell_height"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:hint="@string/edittext_hint_old_password"
+            android:singleLine="true"
+            android:inputType="textPassword" />
+        
+        <EditText
+            android:id="@+id/newPassword"
+            style="@style/EditTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/information_cell_height"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:hint="@string/edittext_hint_new_password"
+            android:singleLine="true"
+            android:inputType="textPassword" />
+        
+        <EditText
+            android:id="@+id/checkPassword"
+            style="@style/EditTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/information_cell_height"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:hint="@string/edittext_hint_check_password"
+            android:singleLine="true"
+            android:inputType="textPassword" />
+        
+    </LinearLayout>
+
+</ScrollView>
