--- a/BreezingHealth/res/layout/fragment_breezing_test_result.xml
+++ b/BreezingHealth/res/layout/fragment_breezing_test_result.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
-        android:text="您x 年x 月x 日的能量代谢值是xx 千卡，低于平均水平。"
+        android:gravity="center_vertical"       
         android:textColor="@color/black"
         android:textSize="@dimen/normal_textsize"
         android:layout_centerInParent="true" />
@@ -22,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
-        android:text="点击查看更多关于《运动和健康的饮食有助你提高您的代谢》"
+        android:text="@string/breezing_result_more"
         android:textColor="@color/black"
         android:textSize="@dimen/normal_textsize"
         android:layout_below="@+id/result"
