breezing health main menu

--- a/BreezingHealth/res/layout/fragment_caloric_burn.xml
+++ b/BreezingHealth/res/layout/fragment_caloric_burn.xml
@@ -9,7 +9,6 @@
         android:layout_width="240dp"
         android:layout_height="240dp"
         android:layout_centerHorizontal="true" /> -->
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -23,24 +22,27 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/TitleTextViewStyle"
-            android:layout_weight="1"/>
-         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/kilo_metabolism"
-            style="@style/TitleTextViewStyle"
-            android:layout_weight="1"
-            android:layout_gravity="center"/>
+            <TextView
+                android:id="@+id/burn_caloric"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                style="@style/TitleTextViewStyle"
+                android:layout_weight="1"
+                android:layout_gravity="center"/>
+             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/kilo_metabolism"
+                style="@style/TitleTextViewStyle"
+                android:layout_weight="1"
+                android:layout_gravity="center"/>
         </LinearLayout>
     </FrameLayout>
 
     <GridView android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/pie_graph_layout"
         android:numColumns="3" />
 
