--- a/BreezingHealth/res/layout/activity_main.xml
+++ b/BreezingHealth/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
             style="@style/ButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.3"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="5dp"
             android:singleLine="true"
             android:text="@string/date_test" />
 
