--- a/BreezingHealth/res/layout/fragment_dialog_weight_picker.xml
+++ b/BreezingHealth/res/layout/fragment_dialog_weight_picker.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="@dimen/picker_height"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:padding="@dimen/activity_horizontal_margin" >
