--- a/BreezingHealth/res/values/arrays.xml
+++ b/BreezingHealth/res/values/arrays.xml
@@ -32,5 +32,11 @@
         <item>历史</item>
         <item>更多</item>
     </string-array>
+    
+    <string-array name="chartViewModel">
+        <item>周视图</item>
+        <item>月视图</item>
+        <item>年视图</item>
+    </string-array>
 
 </resources>
