--- a/BreezingHealth/res/values/dimens.xml
+++ b/BreezingHealth/res/values/dimens.xml
@@ -27,4 +27,17 @@
     <dimen name="left_menu_icon_weight">50dp</dimen>
     <dimen name="left_menu_header_height">80dp</dimen>
     
+    <dimen name="food_searchbar_height">48dp</dimen>
+    <dimen name="food_total_height">48dp</dimen>
+    <dimen name="searchbar_vertical_small_margin">4dp</dimen>
+    
+    <dimen name="food_image_side_lengh">70dp</dimen>
+    <dimen name="select_food_number_layout_width">120dp</dimen>
+    
+    <dimen name="exercise_record_item_type_width">80dp</dimen>
+    <dimen name="exercise_record_item_caloric_width">100dp</dimen>
+    <dimen name="exercise_record_item_min_height">40dp</dimen>
+    
+    <dimen name="picker_height">280dp</dimen>
+    
 </resources>
