add history about weekly monthly and yearly

--- a/BreezingHealth/res/layout/fragment_caloric_burn.xml
+++ b/BreezingHealth/res/layout/fragment_caloric_burn.xml
@@ -12,6 +12,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
+         android:layout_marginTop="10dp"
         android:id="@+id/pie_graph_layout">
         <com.breezing.health.widget.PieGraph
             android:layout_width="match_parent"
@@ -28,7 +29,8 @@
                 android:layout_height="match_parent"
                 style="@style/TitleTextViewStyle"
                 android:layout_weight="1"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:gravity="center"/>
              <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -42,7 +44,7 @@
     <GridView android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/pie_graph_layout"
         android:numColumns="3" />
 
