--- a/BreezingHealth/res/layout/activity_main.xml
+++ b/BreezingHealth/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/information_cell_height"
         android:layout_marginTop="@dimen/activity_vertical_margin" >
-        
+
         <Button
             android:id="@+id/calendar"
             style="@style/ButtonStyle"
@@ -32,14 +32,14 @@
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/top"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_above="@+id/bottom" />
-    
+
     <LinearLayout android:id="@+id/bottom"
         android:layout_width="match_parent"
         android:layout_height="@dimen/actionbar_height"
