--- a/BreezingHealth/res/layout/gridview_caloric_item.xml
+++ b/BreezingHealth/res/layout/gridview_caloric_item.xml
@@ -4,6 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    
+    <ImageView android:id="@+id/icon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:contentDescription="@string/content_description"
+        android:layout_centerHorizontal="true"
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/title"
@@ -13,7 +20,9 @@
         android:textColor="@color/gray"
         android:gravity="center"
         android:textSize="@dimen/small_textsize"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/icon"
+        android:layout_marginTop="@dimen/activity_vertical_small_margin" />
 
     <com.breezing.health.widget.HoloCircleSeekBar
         android:layout_below="@+id/title"
