--- a/BreezingHealth/res/layout/gridview_caloric_item.xml
+++ b/BreezingHealth/res/layout/gridview_caloric_item.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
-    <ImageView android:id="@+id/icon"
+    android:orientation="vertical"
+    android:descendantFocusability="blocksDescendants" >
+
+    <ImageView
+        android:id="@+id/icon"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:contentDescription="@string/content_description"
@@ -14,6 +16,7 @@
 
     <TextView
         android:id="@+id/title"
+        android:layout_below="@+id/icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
@@ -21,12 +24,11 @@
         android:gravity="center"
         android:textSize="@dimen/small_textsize"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/icon"
         android:layout_marginTop="@dimen/activity_vertical_small_margin" />
 
     <com.breezing.health.widget.HoloCircleSeekBar
+        android:id="@+id/seek_bar"
         android:layout_below="@+id/title"
-        android:id="@+id/seekBar"
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:max="100"
@@ -41,8 +43,9 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/activity_vertical_small_margin"
         android:layout_centerHorizontal="true" />
-    
-    <ImageView android:id="@+id/divider"
+
+    <ImageView
+        android:id="@+id/divider"
         android:layout_width="1dp"
         android:layout_height="80dp"
         android:layout_marginTop="@dimen/activity_vertical_margin"
