--- a/BreezingHealth/res/layout/activity_weight_record.xml
+++ b/BreezingHealth/res/layout/activity_weight_record.xml
@@ -20,12 +20,27 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/notice"
         android:layout_marginTop="@dimen/activity_vertical_margin" >
+        
+        <ImageView android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/hopeWeight"
+            android:scaleType="centerInside"
+            android:src="@drawable/bg_seekbar"
+            android:contentDescription="@string/content_description"/>
 
         <SeekBar
             android:id="@+id/seekbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/hopeWeight" />
+            android:layout_toLeftOf="@+id/hopeWeight"
+            android:progressDrawable="@drawable/seekbar_style"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:layout_marginTop="4dp"
+            android:thumb="@drawable/seekbar_thumb"
+            android:minHeight="4dp"
+            android:maxHeight="4dp" />
 
         <TextView
             android:id="@+id/hopeWeight"
@@ -43,13 +58,13 @@
         android:id="@+id/different_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_small_margin"
         android:gravity="center_vertical"
         android:textColor="@color/gray"
         android:textSize="@dimen/small_textsize"
         android:layout_below="@+id/seekbar_layout"
         android:layout_marginRight="100dp"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:background="@drawable/bg_up_forward_box" />
 
     <RelativeLayout android:id="@+id/weight_layout"
         android:layout_width="match_parent"
