--- a/BreezingHealth/res/layout/left_menu.xml
+++ b/BreezingHealth/res/layout/left_menu.xml
@@ -7,6 +7,9 @@
     <ListView android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:cacheColorHint="@color/transparent" />
+        android:cacheColorHint="@color/transparent"
+        android:listSelector="@color/transparent"
+        android:dividerHeight="0dp"
+        android:divider="@null" />
 
 </LinearLayout>
