--- a/BreezingHealth/res/layout/left_menu_header.xml
+++ b/BreezingHealth/res/layout/left_menu_header.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/content_description"
         android:scaleType="centerInside"
-        android:src="@drawable/default_pic" />
+        android:src="@drawable/default_avatar_selector" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,10 +23,9 @@
             android:id="@+id/name"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="@dimen/large_textsize"
             android:text="张三" />
         
@@ -34,13 +33,12 @@
             android:id="@+id/sex"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="@dimen/middle_textsize"
             android:text="男"
-            android:layout_marginTop="@dimen/activity_vertical_margin" />
+            android:layout_marginTop="@dimen/activity_vertical_small_margin" />
         
     </LinearLayout>
 
