--- a/BreezingHealth/res/layout/left_menu_item.xml
+++ b/BreezingHealth/res/layout/left_menu_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_vertical_margin" >
+    android:padding="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg_left_menu_item_selector" >
 
     <ImageView
         android:id="@+id/icon"
@@ -13,7 +14,7 @@
     
     <TextView android:id="@+id/name"
         android:textSize="@dimen/normal_textsize"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:gravity="center_vertical"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
