--- a/BreezingHealth/res/values/colors.xml
+++ b/BreezingHealth/res/values/colors.xml
@@ -37,4 +37,6 @@
     </string-array>
     
     <color name="background_color">#f2f2f2</color>
+    <color name="left_menu_background_color">#282522</color>
+    
 </resources>
