--- a/BreezingHealth/res/layout/list_exercise_record_header.xml
+++ b/BreezingHealth/res/layout/list_exercise_record_header.xml
@@ -1,68 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/activity_horizontal_margin" >
-
-    <Button
-        android:id="@+id/type"
-        style="@style/ButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/information_cell_height"
-        android:singleLine="true"
-        android:text="@string/exercise_type" />
-
-    <Button
-        android:id="@+id/intensity"
-        style="@style/ButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/information_cell_height"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:singleLine="true"
-        android:text="@string/exercise_intensity" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/information_cell_height"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/amount"
-            style="@style/ButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:hint="@string/edittext_hint_exercise_amount"
-            android:singleLine="true" />
-
-         <Button
-            android:id="@+id/equipment"
-            style="@style/ButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-             android:layout_weight="2"
-            android:text="@string/edittext_hint_exercise_amount"
-            android:singleLine="true" />
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/record"
-        style="@style/ButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/information_cell_height"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:singleLine="true"
-        android:text="@string/record" />
-
+    android:layout_height="match_parent" >
+    
     <TextView
-        android:id="@+id/totalCaloric"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/information_cell_height"
+        android:id="@+id/type"
+        android:layout_width="@dimen/exercise_record_item_type_width"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:textColor="@color/black"
-        android:textSize="@dimen/normal_textsize" />
+        android:textSize="@dimen/normal_textsize"
+        android:gravity="center"
+        android:minHeight="@dimen/exercise_record_item_min_height"
+        android:text="@string/type" />
+    
+    <TextView
+        android:id="@+id/des"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:textColor="@color/black"
+        android:textSize="@dimen/normal_textsize"
+        android:gravity="center"
+        android:minHeight="@dimen/exercise_record_item_min_height"
+        android:text="@string/detail" />
+    
+    <TextView
+        android:id="@+id/caloric"
+        android:layout_width="@dimen/exercise_record_item_caloric_width"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:textColor="@color/black"
+        android:textSize="@dimen/normal_textsize"
+        android:gravity="center"
+        android:minHeight="@dimen/exercise_record_item_min_height"
+        android:text="@string/consume" />
 
 </LinearLayout>
