--- a/BreezingHealth/res/layout/activity_launcher.xml
+++ b/BreezingHealth/res/layout/activity_launcher.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/bg_launcher" >
+    
+    <ImageView android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerInside"
+        android:src="@drawable/default_launcher"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/content_description"
+        android:layout_marginTop="90dp"
+        android:padding="@dimen/activity_vertical_margin" />
 
     <TextView
-        style="@style/TitleTextViewStyle"
-        android:layout_width="90dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:singleLine="true"
-        android:layout_gravity="center"
-        android:text="@string/app_name" />
+        android:gravity="center"
+        android:text="@string/breezing_webside"
+        android:textColor="@color/silver"
+        android:textSize="@dimen/normal_textsize"
+        android:layout_alignParentBottom="true" />
 
-</LinearLayout>
+</RelativeLayout>
