--- a/BreezingHealth/res/values/styles.xml
+++ b/BreezingHealth/res/values/styles.xml
@@ -4,12 +4,14 @@
         <item name="numberPickerStyle">@style/NPWidget.Holo.Light.NumberPicker</item>
          <item name="calendarViewStyle">@style/CalendarView</item>
          <item name="vpiLinePageIndicatorStyle">@style/CustomLinePageIndicator</item>
+         <item name="vpiCirclePageIndicatorStyle">@style/CustomCirclePageIndicator</item>
     </style>
 
     <style name="AppBaseTheme.NoTitleBar.Fullscreen" parent="android:Theme.Light.NoTitleBar.Fullscreen">
         <item name="numberPickerStyle">@style/NPWidget.Holo.Light.NumberPicker</item>
          <item name="calendarViewStyle">@style/CalendarView</item>
          <item name="vpiLinePageIndicatorStyle">@style/CustomLinePageIndicator</item>
+         <item name="vpiCirclePageIndicatorStyle">@style/CustomCirclePageIndicator</item>
     </style>
 
     <!-- Application theme. -->
@@ -58,6 +60,14 @@
         <item name="strokeWidth">3dp</item>
         <item name="lineWidth">20dp</item>
         <item name="selectedColor">@color/red</item>
+    </style>
+    
+    <style name="CustomCirclePageIndicator">
+        <item name="fillColor">@color/red</item>
+        <item name="strokeColor">@color/gray</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="radius">4dp</item>
+        <item name="centered">true</item>
     </style>
 
 </resources>
