--- a/BreezingHealth/res/layout/activity_balance_history.xml
+++ b/BreezingHealth/res/layout/activity_balance_history.xml
@@ -1,43 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin" >
-
-        <Button
-            android:id="@+id/model"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:orientation="vertical">"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:background="@drawable/btn_white_round_selector"
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textSize="@dimen/small_textsize" />
+            android:layout_marginTop="@dimen/activity_vertical_margin" >
+            <Button
+                android:id="@+id/model"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:background="@drawable/btn_white_round_selector"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textSize="@dimen/small_textsize" />
 
-        <Button
-            android:id="@+id/during"
-            android:layout_width="0dp"
-            android:layout_weight="2.5"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:background="@drawable/btn_white_round_selector"
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textSize="@dimen/small_textsize" />
+            <Button
+                android:id="@+id/during"
+                android:layout_width="0dp"
+                android:layout_weight="2.5"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:background="@drawable/btn_white_round_selector"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textSize="@dimen/small_textsize" />
+        </LinearLayout>
+   
+        <com.breezing.health.widget.CustomViewPager
+             android:id="@+id/view_pager"
+             android:layout_width="match_parent"
+             android:layout_height="0dp"
+             android:layout_weight="1"
+             android:layout_marginTop="@dimen/activity_vertical_margin" />
     </LinearLayout>
     
-    <com.breezing.health.widget.CustomViewPager
-        android:id="@+id/viewPager"
+    <com.viewpagerindicator.LinePageIndicator
+        android:id="@+id/indicator"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="@dimen/activity_vertical_margin" />
-
-</LinearLayout>
+        android:layout_height="wrap_content"        
+        android:padding="@dimen/activity_vertical_small_margin"       
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+</RelativeLayout>
