modify some pages' ui

--- a/BreezingHealth/res/layout/gridview_food_catagory_item.xml
+++ b/BreezingHealth/res/layout/gridview_food_catagory_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center" >
+    android:background="@color/bg_food_catagory_color" >
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/food_image_side_height"
         android:id="@+id/icon"
         android:scaleType="centerInside"
         android:adjustViewBounds="true"
@@ -16,10 +16,11 @@
     
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:id="@+id/name"
-        android:textColor="@color/black"
-        android:textSize="@dimen/middle_textsize"
-        android:gravity="center" />
+        android:layout_below="@+id/icon"
+        android:textColor="@color/food_catagory_text_selector"
+        android:textSize="@dimen/small_textsize"
+        android:gravity="center_horizontal" />
 
-</LinearLayout>
+</RelativeLayout>
