--- a/BreezingHealth/res/layout/activity_caloric_intake.xml
+++ b/BreezingHealth/res/layout/activity_caloric_intake.xml
@@ -17,15 +17,14 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/searchbar_vertical_small_margin"
-            android:hint="@string/input_food_name_keyword"
-            android:textColor="@color/black"
-            android:textSize="@dimen/middle_textsize"
             android:background="@drawable/bg_search_edittext"
             android:drawableLeft="@drawable/tag_search"
             android:drawablePadding="@dimen/activity_horizontal_small_margin"
+            android:hint="@string/input_food_name_keyword"
             android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin" />
-        
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:textColor="@color/black"
+            android:textSize="@dimen/middle_textsize" />
     </LinearLayout>
 
     <ImageView
@@ -47,26 +46,27 @@
             android:id="@+id/total"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/searchbar_vertical_small_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/searchbar_vertical_small_margin"
+            android:layout_toLeftOf="@+id/detail"
             android:textColor="@color/white"
             android:textSize="@dimen/normal_textsize"
-            android:layout_toLeftOf="@+id/detail" />
+            android:gravity="center_vertical" />
 
         <Button
             android:id="@+id/detail"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
             android:layout_marginBottom="@dimen/searchbar_vertical_small_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/searchbar_vertical_small_margin"
+            android:background="@drawable/btn_white_small_selector"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
             android:singleLine="true"
             android:text="@string/detail"
-            android:layout_alignParentRight="true" />
+            android:textColor="@color/black" />
     </RelativeLayout>
 
     <ListView
@@ -88,14 +88,21 @@
         <LinearLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="match_parent"
+            android:background="@color/translucence"
+            android:clickable="true" >
 
             <GridView
                 android:id="@+id/gridView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:numColumns="3" />
+                android:horizontalSpacing="2.0dp"
+                android:numColumns="4"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="2.0dp"
+                android:padding="0dp"
+                android:background="@color/background_color"
+                android:listSelector="@null" />
         </LinearLayout>
 
         <View
