--- a/BreezingHealth/res/layout/helper_pager_item.xml
+++ b/BreezingHealth/res/layout/helper_pager_item.xml
@@ -14,17 +14,21 @@
     <ImageView
         android:id="@+id/step"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:contentDescription="@string/content_description"
         android:scaleType="centerInside"
-        android:layout_marginTop="@dimen/activity_vertical_margin" />
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_above="@+id/introduce_layout" />
 
-    <RelativeLayout
+    <RelativeLayout android:id="@+id/introduce_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_below="@+id/step" >
+        android:layout_marginBottom="120dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="30dp" >
 
         <TextView android:id="@+id/introduce"
             android:layout_width="match_parent"
