--- a/BreezingHealth/res/layout/list_food_item.xml
+++ b/BreezingHealth/res/layout/list_food_item.xml
@@ -2,51 +2,50 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/activity_horizontal_margin" >
+    android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="@dimen/food_image_side_lengh"
-        android:layout_height="@dimen/food_image_side_lengh"
-        android:adjustViewBounds="true"
+        android:layout_width="@dimen/food_image_side_width"
+        android:layout_height="@dimen/food_image_side_height"
         android:contentDescription="@string/content_description"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/fishs" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/searchbar_vertical_small_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/searchbar_vertical_small_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_small_margin"
         android:layout_toRightOf="@+id/image"
         android:textColor="@color/black"
         android:textSize="@dimen/normal_textsize"
         android:layout_toLeftOf="@+id/selectLayout"
-        android:textIsSelectable="false" />
+        android:textIsSelectable="false"
+        android:layout_centerVertical="true" />
 
     <TextView
         android:id="@+id/unit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/searchbar_vertical_small_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/searchbar_vertical_small_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_small_margin"
         android:layout_toRightOf="@+id/image"
         android:textColor="@color/gray"
-        android:textSize="@dimen/middle_textsize"
+        android:textSize="@dimen/small_textsize"
         android:layout_toLeftOf="@+id/selectLayout"
-        android:textIsSelectable="false" />
+        android:textIsSelectable="false"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:id="@+id/selectLayout"
         android:layout_width="@dimen/select_food_number_layout_width"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true" >
+        android:layout_height="@dimen/food_image_side_height"
+        android:layout_alignParentRight="true"
+        android:paddingTop="@dimen/activity_vertical_small_margin"
+            android:paddingBottom="@dimen/activity_vertical_small_margin"
+            android:paddingRight="@dimen/activity_vertical_small_margin" >
         
         <Button
             android:id="@+id/increase"
@@ -54,7 +53,9 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:text="@string/tag_increase"
-            android:textSize="@dimen/normal_textsize" />
+            android:textSize="@dimen/normal_textsize"
+            android:background="@drawable/btn_food_number_selector"
+             />
         
         <EditText
             android:id="@+id/number"
@@ -67,7 +68,9 @@
             android:gravity="center"
             android:textSize="@dimen/normal_textsize"
             android:inputType="number"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/bg_food_number"
+             />
         
         <Button
             android:id="@+id/decrease"
@@ -75,7 +78,9 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:text="@string/tag_decrease"
-            android:textSize="@dimen/normal_textsize" />
+            android:textSize="@dimen/normal_textsize"
+            android:background="@drawable/btn_food_number_selector"
+             />
         
     </LinearLayout>
 
