--- a/BreezingHealth/res/values/dimens.xml
+++ b/BreezingHealth/res/values/dimens.xml
@@ -32,7 +32,8 @@
     <dimen name="food_total_height">48dp</dimen>
     <dimen name="searchbar_vertical_small_margin">4dp</dimen>
     
-    <dimen name="food_image_side_lengh">70dp</dimen>
+    <dimen name="food_image_side_height">80dp</dimen>
+    <dimen name="food_image_side_width">100dp</dimen>
     <dimen name="select_food_number_layout_width">120dp</dimen>
     
     <dimen name="exercise_record_item_type_width">80dp</dimen>
