add login function

--- a/BreezingHealth/res/layout/activity_modify_password.xml
+++ b/BreezingHealth/res/layout/activity_modify_password.xml
@@ -11,7 +11,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin" >
 
         <EditText
-            android:id="@+id/oldPassword"
+            android:id="@+id/old_password"
             style="@style/EditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="@dimen/information_cell_height"
@@ -21,7 +21,7 @@
             android:inputType="textPassword" />
         
         <EditText
-            android:id="@+id/newPassword"
+            android:id="@+id/new_password"
             style="@style/EditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="@dimen/information_cell_height"
@@ -31,7 +31,7 @@
             android:inputType="textPassword" />
         
         <EditText
-            android:id="@+id/checkPassword"
+            android:id="@+id/check_password"
             style="@style/EditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="@dimen/information_cell_height"
