--- a/BreezingHealth/res/layout/activity_weight_record.xml
+++ b/BreezingHealth/res/layout/activity_weight_record.xml
@@ -51,7 +51,8 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:gravity="center_vertical"
             android:textColor="@color/gray"
-            android:textSize="@dimen/middle_textsize" />
+            android:textSize="@dimen/middle_textsize"
+            android:visibility="gone" />
     </RelativeLayout>
     
     <TextView
@@ -114,9 +115,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/record"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:background="@drawable/btn_red_round_selector"
+        android:background="@drawable/btn_white_round_big_selector"
         android:singleLine="true"
         android:text="@string/connect_to_weight_scale"
-        android:textColor="@color/white" />
+        android:textColor="@color/black" />
 
 </RelativeLayout>
