--- a/BreezingHealth/res/layout/fragment_dialog_date_picker.xml
+++ b/BreezingHealth/res/layout/fragment_dialog_date_picker.xml
@@ -5,62 +5,78 @@
     android:background="@color/translucence"
     android:orientation="vertical" >
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/picker_height"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:padding="@dimen/activity_horizontal_margin" >
+        android:background="@drawable/picker_view_bg" >
 
-        <net.simonvt.numberpicker.NumberPicker
-            android:id="@+id/year"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
+            android:orientation="horizontal"
+            android:padding="@dimen/activity_horizontal_margin" >
 
-        <TextView
-            style="@style/TitleTextViewStyle"
-            android:layout_width="25dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:singleLine="true"
-            android:text="@string/year"
-            android:gravity="center" />
+            <net.simonvt.numberpicker.NumberPicker
+                android:id="@+id/year"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1" />
 
-        <net.simonvt.numberpicker.NumberPicker
-            android:id="@+id/month"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
+            <TextView
+                style="@style/TitleTextViewStyle"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="@string/year" />
 
-        <TextView
-            style="@style/TitleTextViewStyle"
-            android:layout_width="25dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:singleLine="true"
-            android:text="@string/month"
-            android:gravity="center" />
+            <net.simonvt.numberpicker.NumberPicker
+                android:id="@+id/month"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1" />
 
-        <net.simonvt.numberpicker.NumberPicker
-            android:id="@+id/day"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
+            <TextView
+                style="@style/TitleTextViewStyle"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="@string/month" />
 
-        <TextView
-            style="@style/TitleTextViewStyle"
-            android:layout_width="25dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:singleLine="true"
-            android:text="@string/day"
-            android:gravity="center" />
-    </LinearLayout>
+            <net.simonvt.numberpicker.NumberPicker
+                android:id="@+id/day"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1" />
+
+            <TextView
+                style="@style/TitleTextViewStyle"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="@string/day" />
+        </LinearLayout>
+        
+        <ImageView android:layout_centerInParent="true"
+            android:layout_height="@dimen/wheel_val_height"
+            android:layout_width="match_parent"
+            android:src="@drawable/wheel_val"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/content_description"
+            android:paddingTop="3dp"
+            android:clickable="true" />
+        
+    </RelativeLayout>
 
     <include
         android:layout_width="match_parent"
