--- a/BreezingHealth/res/layout/fragment_dialog_intensity.xml
+++ b/BreezingHealth/res/layout/fragment_dialog_intensity.xml
@@ -11,22 +11,36 @@
         android:layout_above="@+id/fragment_container"
         layout="@layout/fragment_dialog_picker_actionbar" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/picker_height"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:padding="@dimen/activity_horizontal_margin" >
+        android:background="@drawable/picker_view_bg" >
 
-        <net.simonvt.numberpicker.NumberPicker
-            android:id="@+id/intensity"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
+            android:orientation="horizontal"
+            android:padding="@dimen/activity_horizontal_margin" >
 
-    </LinearLayout>
+            <net.simonvt.numberpicker.NumberPicker
+                android:id="@+id/intensity"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1" />
+        </LinearLayout>
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/wheel_val_height"
+            android:layout_centerInParent="true"
+            android:clickable="true"
+            android:contentDescription="@string/content_description"
+            android:paddingTop="3dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/wheel_val" />
+    </RelativeLayout>
 
 </RelativeLayout>
