--- a/BreezingHealth/res/layout/fragment_dialog_month_interval_picker.xml
+++ b/BreezingHealth/res/layout/fragment_dialog_month_interval_picker.xml
@@ -5,52 +5,67 @@
     android:background="@color/translucence"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/fragmentContainer"
+    <RelativeLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/picker_height"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:padding="@dimen/activity_horizontal_margin" >
+        android:background="@drawable/picker_view_bg" >
 
-        <net.simonvt.numberpicker.NumberPicker
-            android:id="@+id/year"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
+            android:orientation="horizontal"
+            android:padding="@dimen/activity_horizontal_margin" >
 
-        <TextView
-            style="@style/TitleTextViewStyle"
-            android:layout_width="25dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:singleLine="true"
-            android:text="@string/year"
-            android:gravity="center" />
+            <net.simonvt.numberpicker.NumberPicker
+                android:id="@+id/year"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1" />
 
-        <net.simonvt.numberpicker.NumberPicker
-            android:id="@+id/month"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
+            <TextView
+                style="@style/TitleTextViewStyle"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="@string/year" />
 
-        <TextView
-            style="@style/TitleTextViewStyle"
-            android:layout_width="25dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:singleLine="true"
-            android:text="@string/month"
-            android:gravity="center" />
-        
-    </LinearLayout>
+            <net.simonvt.numberpicker.NumberPicker
+                android:id="@+id/month"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1" />
+
+            <TextView
+                style="@style/TitleTextViewStyle"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="@string/month" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/wheel_val_height"
+            android:layout_centerInParent="true"
+            android:clickable="true"
+            android:contentDescription="@string/content_description"
+            android:paddingTop="3dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/wheel_val" />
+    </RelativeLayout>
 
     <include
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/fragmentContainer"
+        android:layout_above="@+id/fragment_container"
         layout="@layout/fragment_dialog_picker_actionbar" />
 
 </RelativeLayout>
