--- a/BreezingHealth/res/layout/fragment_dialog_picker_actionbar.xml
+++ b/BreezingHealth/res/layout/fragment_dialog_picker_actionbar.xml
@@ -2,15 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/orange"
+    android:background="@drawable/bg_action_bar"
     android:padding="@dimen/activity_horizontal_small_margin" >
 
     <Button
         android:id="@+id/cancel"
         style="@style/ButtonStyle"
-        android:layout_width="80dp"
-        android:layout_height="@dimen/actionbar_height"
-        android:text="@string/cancel" />
+        android:layout_width="60dp"
+        android:layout_height="38dp"
+        android:text="@string/cancel"
+        android:background="@drawable/btn_white_small_selector" />
 
     <TextView
         android:id="@+id/title"
@@ -24,9 +25,10 @@
     <Button
         android:id="@+id/confirm"
         style="@style/ButtonStyle"
-        android:layout_width="80dp"
-        android:layout_height="@dimen/actionbar_height"
+        android:layout_width="60dp"
+        android:layout_height="38dp"
         android:layout_alignParentRight="true"
-        android:text="@string/confirm" />
+        android:text="@string/confirm"
+        android:background="@drawable/btn_white_small_selector" />
 
 </RelativeLayout>
