--- a/BreezingHealth/res/layout/fragment_dialog_weight_picker.xml
+++ b/BreezingHealth/res/layout/fragment_dialog_weight_picker.xml
@@ -5,46 +5,61 @@
     android:background="@color/translucence"
     android:orientation="vertical" >
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/picker_height"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:padding="@dimen/activity_horizontal_margin" >
+        android:background="@drawable/picker_view_bg" >
 
-        <net.simonvt.numberpicker.NumberPicker
-            android:id="@+id/integer"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
+            android:orientation="horizontal"
+            android:padding="@dimen/activity_horizontal_margin" >
 
-        <TextView
-            style="@style/TitleTextViewStyle"
-            android:layout_width="25dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:singleLine="true"
-            android:gravity="center"
-            android:text="@string/dot" />
+            <net.simonvt.numberpicker.NumberPicker
+                android:id="@+id/integer"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1" />
 
-        <net.simonvt.numberpicker.NumberPicker
-            android:id="@+id/decimals"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
+            <TextView
+                style="@style/TitleTextViewStyle"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="@string/dot" />
 
-        <net.simonvt.numberpicker.NumberPicker
-            android:id="@+id/unit"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:layout_marginLeft="@dimen/activity_horizontal_small_margin" />
+            <net.simonvt.numberpicker.NumberPicker
+                android:id="@+id/decimals"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1" />
 
-    </LinearLayout>
+            <net.simonvt.numberpicker.NumberPicker
+                android:id="@+id/unit"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/wheel_val_height"
+            android:layout_centerInParent="true"
+            android:clickable="true"
+            android:contentDescription="@string/content_description"
+            android:paddingTop="3dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/wheel_val" />
+    </RelativeLayout>
 
     <include
         android:layout_width="match_parent"
