--- a/BreezingHealth/res/layout/fragment_dialog_year_interval_picker.xml
+++ b/BreezingHealth/res/layout/fragment_dialog_year_interval_picker.xml
@@ -5,13 +5,18 @@
     android:background="@color/translucence"
     android:orientation="vertical" >
 
-    <LinearLayout
+     <RelativeLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/picker_height"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:padding="@dimen/activity_horizontal_margin" >
+        android:background="@drawable/picker_view_bg" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:padding="@dimen/activity_horizontal_margin" >
 
         <net.simonvt.numberpicker.NumberPicker
             android:id="@+id/year"
@@ -30,6 +35,17 @@
             android:gravity="center" />
         
     </LinearLayout>
+    
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/wheel_val_height"
+            android:layout_centerInParent="true"
+            android:clickable="true"
+            android:contentDescription="@string/content_description"
+            android:paddingTop="3dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/wheel_val" />
+    </RelativeLayout>
 
     <include
         android:layout_width="match_parent"
