--- a/BreezingHealth/res/layout/list_food_item.xml
+++ b/BreezingHealth/res/layout/list_food_item.xml
@@ -16,72 +16,74 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
         android:layout_marginRight="@dimen/activity_horizontal_small_margin"
+        android:layout_toLeftOf="@+id/selectLayout"
         android:layout_toRightOf="@+id/image"
         android:textColor="@color/black"
-        android:textSize="@dimen/normal_textsize"
-        android:layout_toLeftOf="@+id/selectLayout"
         android:textIsSelectable="false"
-        android:layout_centerVertical="true" />
-
-    <TextView
-        android:id="@+id/unit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_small_margin"
-        android:layout_toRightOf="@+id/image"
-        android:textColor="@color/gray"
-        android:textSize="@dimen/small_textsize"
-        android:layout_toLeftOf="@+id/selectLayout"
-        android:textIsSelectable="false"
-        android:visibility="invisible" />
+        android:textSize="@dimen/normal_textsize" />
 
     <LinearLayout
         android:id="@+id/selectLayout"
         android:layout_width="@dimen/select_food_number_layout_width"
         android:layout_height="@dimen/food_image_side_height"
         android:layout_alignParentRight="true"
-        android:paddingTop="@dimen/activity_vertical_small_margin"
-            android:paddingBottom="@dimen/activity_vertical_small_margin"
-            android:paddingRight="@dimen/activity_vertical_small_margin" >
-        
+        android:paddingBottom="@dimen/activity_vertical_small_margin"
+        android:paddingRight="@dimen/activity_vertical_small_margin"
+        android:paddingTop="@dimen/activity_vertical_small_margin" >
+
         <Button
             android:id="@+id/increase"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:text="@string/tag_increase"
-            android:textSize="@dimen/normal_textsize"
+            android:layout_weight="1"
             android:background="@drawable/btn_food_number_selector"
-             />
-        
-        <EditText
-            android:id="@+id/number"
+            android:text="@string/tag_increase"
+            android:textSize="@dimen/normal_textsize" />
+
+        <RelativeLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:textColor="@color/red"
-            android:hint="@string/number_zero"
-            android:textColorHint="@color/gray"
-            android:gravity="center"
-            android:textSize="@dimen/normal_textsize"
-            android:inputType="number"
-            android:textStyle="bold"
-            android:background="@drawable/bg_food_number"
-             />
-        
+            android:layout_weight="1.8"
+            android:background="@drawable/bg_food_number" >
+
+            <EditText
+                android:id="@+id/number"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:gravity="center"
+                android:hint="@string/number_zero"
+                android:inputType="number"
+                android:textColor="@color/red"
+                android:textColorHint="@color/gray"
+                android:textSize="@dimen/normal_textsize"
+                android:paddingLeft="@dimen/activity_horizontal_small_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/middle_textsize"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="@dimen/activity_vertical_small_margin" />
+            
+        </RelativeLayout>
+
         <Button
             android:id="@+id/decrease"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
-            android:text="@string/tag_decrease"
-            android:textSize="@dimen/normal_textsize"
+            android:layout_weight="1"
             android:background="@drawable/btn_food_number_selector"
-             />
-        
+            android:text="@string/tag_decrease"
+            android:textSize="@dimen/normal_textsize" />
     </LinearLayout>
 
 </RelativeLayout>
