--- a/BreezingHealth/res/layout/uitableview_custom_item.xml
+++ b/BreezingHealth/res/layout/uitableview_custom_item.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_small_margin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minHeight="40dip">
+    android:minHeight="40dp">
     
     <TextView
         android:layout_width="wrap_content"
