--- a/BreezingHealth/res/values/dimens.xml
+++ b/BreezingHealth/res/values/dimens.xml
@@ -33,13 +33,15 @@
     <dimen name="searchbar_vertical_small_margin">4dp</dimen>
     
     <dimen name="food_image_side_height">80dp</dimen>
-    <dimen name="food_image_side_width">100dp</dimen>
-    <dimen name="select_food_number_layout_width">120dp</dimen>
+    <dimen name="food_image_side_width">60dp</dimen>
+    <dimen name="select_food_number_layout_width">160dp</dimen>
     
     <dimen name="exercise_record_item_type_width">80dp</dimen>
     <dimen name="exercise_record_item_caloric_width">100dp</dimen>
     <dimen name="exercise_record_item_min_height">40dp</dimen>
     
     <dimen name="picker_height">280dp</dimen>
+    
+    <dimen name="wheel_val_height">55dp</dimen>
     
 </resources>
