--- a/BreezingHealth/res/drawable/all_catagory_selector.xml
+++ b/BreezingHealth/res/drawable/all_catagory_selector.xml
@@ -4,5 +4,8 @@
     <item android:state_focused="true" android:drawable="@drawable/ic_all_catagory_l" />
     <item android:state_selected="true" android:drawable="@drawable/ic_all_catagory_l" />
     <item android:state_checked="true" android:drawable="@drawable/ic_all_catagory_l" />
-    <item android:state_selected="false" android:state_pressed="false" android:state_focused="false" android:drawable="@drawable/ic_all_catagory_g" />
+    <item android:state_selected="false"
+          android:state_pressed="false" 
+          android:state_focused="false" 
+          android:drawable="@drawable/ic_all_catagory_g" />
 </selector>
