--- a/BreezingHealth/res/layout/activity_account_detail.xml
+++ b/BreezingHealth/res/layout/activity_account_detail.xml
@@ -18,6 +18,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:singleLine="true"   
             android:background="@drawable/btn_red_round_selector"
             android:textColor="@color/white"
