--- a/BreezingHealth/res/layout/activity_other_caloric_burn.xml
+++ b/BreezingHealth/res/layout/activity_other_caloric_burn.xml
@@ -12,7 +12,7 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:gravity="center_vertical"
-        android:textColor="@color/gray"
+        android:textColor="@color/black"
         android:text="@string/base_exercise_caloric_burn"
         android:textSize="@dimen/normal_textsize" />
 
@@ -20,21 +20,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/baseResult"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_small_margin"
         layout="@layout/vane_layout"
         android:id="@+id/base_vane" />
+    
+    <TextView
+        android:id="@+id/base_result_notice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:gravity="center_vertical|right"
+        android:textColor="@color/gray"
+        android:text="@string/base_exercise_caloric_burn_notice"
+        android:textSize="@dimen/small_textsize"
+        android:layout_below="@+id/base_vane" />
     
     <TextView
         android:id="@+id/digestResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_below="@+id/base_vane"
+        android:layout_below="@+id/base_result_notice"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:gravity="center_vertical"
-        android:textColor="@color/gray"
+        android:textColor="@color/black"
         android:text="@string/digest_exercise_caloric_burn"
         android:textSize="@dimen/normal_textsize" />
 
@@ -42,9 +55,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/digestResult"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_small_margin"
         layout="@layout/vane_layout"
         android:id="@+id/digest_vane" />
+    
+    <TextView
+        android:id="@+id/digest_result_notice"
+        android:layout_below="@+id/digest_vane"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:gravity="center_vertical|right"
+        android:textColor="@color/gray"
+        android:text="@string/digest_exercise_caloric_burn_notice"
+        android:textSize="@dimen/small_textsize" />
     
     <TextView
         android:id="@+id/more"
