--- a/BreezingHealth/res/layout/activity_weight_record.xml
+++ b/BreezingHealth/res/layout/activity_weight_record.xml
@@ -35,12 +35,13 @@
             android:layout_toLeftOf="@+id/hopeWeight"
             android:progressDrawable="@drawable/seekbar_style"
             style="?android:attr/progressBarStyleHorizontal"
-            android:paddingLeft="7dp"
-            android:paddingRight="7dp"
+            android:paddingLeft="11dp"
+            android:paddingRight="11dp"
             android:layout_marginTop="4dp"
             android:thumb="@drawable/seekbar_thumb"
             android:minHeight="4dp"
-            android:maxHeight="4dp" />
+            android:maxHeight="4dp"
+            android:progress="100" />
 
         <TextView
             android:id="@+id/hopeWeight"
@@ -63,7 +64,6 @@
         android:textColor="@color/gray"
         android:textSize="@dimen/small_textsize"
         android:layout_below="@+id/seekbar_layout"
-        android:layout_marginRight="100dp"
         android:layout_alignParentRight="true"
         android:background="@drawable/bg_up_forward_box" />
 
