--- a/BreezingHealth/res/layout/fragment_breezing_test_result.xml
+++ b/BreezingHealth/res/layout/fragment_breezing_test_result.xml
@@ -14,158 +14,21 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:textSize="@dimen/normal_textsize"
         android:layout_marginTop="50dp" />
-
-    <RelativeLayout
+    
+    <include
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/result"
         android:layout_marginTop="30dp"
-        android:id="@+id/vane" >
+        layout="@layout/vane_layout"
+        android:id="@+id/total_vane" />
 
-        <ImageView
-            android:id="@+id/begin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/content_description"
-            android:singleLine="true"
-            android:src="@drawable/bg_vane" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingBottom="10dp" >
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" >
-
-                <ImageView
-                    android:id="@+id/number_first"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/content_description"
-                    android:src="@drawable/number1" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_centerInParent="true"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/content_description"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/divider_breezing_test" />
-            </RelativeLayout>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:singleLine="true"
-                android:src="@drawable/ic_ring" />
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" >
-
-                <ImageView
-                    android:id="@+id/number_second"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/content_description"
-                    android:src="@drawable/number3" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_centerInParent="true"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/content_description"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/divider_breezing_test" />
-            </RelativeLayout>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:singleLine="true"
-                android:src="@drawable/ic_ring" />
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" >
-
-                <ImageView
-                    android:id="@+id/number_third"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/content_description"
-                    android:src="@drawable/number0" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_centerInParent="true"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/content_description"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/divider_breezing_test" />
-            </RelativeLayout>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:singleLine="true"
-                android:src="@drawable/ic_ring" />
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" >
-
-                <ImageView
-                    android:id="@+id/number_forth"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/content_description"
-                    android:src="@drawable/number0" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_centerInParent="true"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/content_description"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/divider_breezing_test" />
-            </RelativeLayout>
-        </LinearLayout>
-    </RelativeLayout>
-    
     <TextView
         android:id="@+id/balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/vane"
+        android:layout_below="@+id/total_vane"
         android:gravity="center_vertical"
         android:textColor="@color/gray"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
